--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,7 @@
   --white: #fff;
   --white-grayish: #eee;
   --color-primary: #8040ea;
+  --black: #404040;
 
   --fontTitle: "Raleway", sans-serif;
   --fontText: "Roboto", sans-serif;
@@ -33,7 +34,7 @@ section {
   flex-flow: column;
   row-gap: 2em;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 1em;
 }
 
@@ -66,7 +67,9 @@ section {
 }
 
 .paragraph {
-  color: 600;
+  text-align: center;
+  font-weight: 400;
+  color: var(--black);
   font-size: 1.2em;
   font-family: var(--fontText);
 }
@@ -78,10 +81,14 @@ section {
 
 .image {
   display: block;
-  width: 300px;
+  width: 290px;
   height: auto;
   margin: 0 auto;
   overflow: hidden;
+}
+
+.image--code {
+  width: 300px;
 }
 
 .coverImage {
@@ -95,10 +102,31 @@ section {
   .image {
     width: 600px;
   }
+
+  .image--code {
+    width: 320px;
+  }
+
+  .paragraph {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-width: 1024px) {
+  .title {
+    font-size: 3em;
+  }
+
+  .paragraph {
+    font-size: 1.5em;
+  }
+
   .image {
     width: 768px;
+  }
+
+  .image--code {
+    width: 360px;
   }
 }
