add the icon to the website

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,7 @@ html(lang="en")
     meta(name="keywords", content="Node.js, API Rest, Machine Learning")
     title EMCODY Machine Learnig
     link(rel="stylesheet", href="./css/main.css")
+    link(rel="shortcut icon", href="./images/icon-azure.png", type="image/png")
     //- Google Fonts
     link(rel="preconnect", href="https://fonts.googleapis.com")
     link(rel="preconnect", href="https://fonts.gstatic.com" crossorigin)
